--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,6 @@
     <title>React Boilerplate</title>
 </head>
 <body>
-    <div id="ROOT"></div>
+    <div id="ROOT" style="background: #cee1ff; padding: 10px;"></div>
 </body>
 </html>
