Change demo page title

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>React Boilerplate</title>
+    <title>Periphery Plots Demo: Seattle Weather Data</title>
 </head>
 <body>
     <div id="ROOT" style="padding: 10px;"></div>
