--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,6 @@
     <title>Periphery Plots Demo: Seattle Weather Data</title>
 </head>
 <body>
-    <div id="ROOT" style="padding: 10px;"></div>
+    <div id="ROOT" style="width: 100%; height: 100%; border: 1px solid #0000ff"></div>
 </body>
 </html>
