--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Periphery Plots Demo: Seattle Weather Data</title>
 </head>
 <body>
-    <div id="ROOT" style="width: 100%; height: 100%; border: 2px solid #5872b8"></div>
-<script type="text/javascript" src="app.js"></script></body>
+    <div id="DEMO" style="width: 100%; height: 100%;"></div>
+<script type="text/javascript" src="bundle.js"></script></body>
 </html>
